--- a/frontend/src/Pages/CSS/UserProfile.css
+++ b/frontend/src/Pages/CSS/UserProfile.css
@@ -42,6 +42,7 @@ input, select {
 button {
   width: 100%;
   padding: 10px;
+  background-color: #ff5a5a;
   color: white;
   border: none;
   border-radius: 4px;
