Cambio de color en el hover del enviar comentario

--- a/frontend/src/Components/CommentsBox/CommentsBox.css
+++ b/frontend/src/Components/CommentsBox/CommentsBox.css
@@ -110,7 +110,7 @@
 }
 
 .commentsbox-form button:hover {
-  background-color: #4b5563;
+  background-color: #eb5959;
 }
 
 @media(max-width:1280px){
