--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -112,6 +112,7 @@
 @media(max-width:800px){
     .hero-left{
         padding-left: 30px;
+        max-width: 30%;
     }
     .hero-left h2{
         font-size: 16px;
