--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -35,6 +35,18 @@
     font-size: 18px;
     font-weight: 500;
 }
+
+#sort-select {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 20px;
+    width: 80%;
+    height: 40px;
+    padding: 10px 20px;
+    border-radius: 40px;
+    border: 1px solid #888;
+}
 @media(max-width:1280px){
     .shopcategory-banner{
         margin: 20px auto;
@@ -84,16 +96,8 @@
     .shopcategory-products{
         grid-template-columns: 1fr 1fr;
     }
-}
-
 #sort-select {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0px 20px;
-    width: 80%;
-    height: 40px;
-    padding: 10px 20px;
-    border-radius: 40px;
-    border: 1px solid #888;
+    height: 25px;
+    padding: 4px 14px;
+}
 }
