Una bobadita jijija

--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -29,9 +29,17 @@
 }
 
 .hero-hand-icon{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 20px;
+        border-radius: 8px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        width: 400px;
+        height: 100px;
+        transition: background-color 0.3s ease; /* Transición suave entre colores */
 }
 
 .hero-hand-icon img{
