--- a/frontend/src/Components/SearchModal/SearchModal.css
+++ b/frontend/src/Components/SearchModal/SearchModal.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -28,6 +28,7 @@
   padding: 10px;
   cursor: pointer;
   float: right;
+  border-radius: 4px;
 }
 
 .search-result-item {
@@ -41,5 +42,6 @@
 .search-result-item img {
   width: 50px;
   height: 50px;
+  object-fit: cover;
   margin-right: 10px;
 }
