Cambios de color, linea inferior de la navbar

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -166,7 +166,7 @@
     width: 80%;
     height: 3px;
     border-radius: 10px;
-    background: #ff4141;
+    background: #ffacd5;
 }
 
 .nav-login-cart {
