--- a/frontend/src/Pages/CSS/LoginSignup.css
+++ b/frontend/src/Pages/CSS/LoginSignup.css
@@ -33,7 +33,6 @@
 
 .loginsignup-fields input{
     height: 72px;
-    width: 100%;
     padding-left: 20px;
     border: 1px solid #c9c9c9;
     outline: none;
@@ -74,6 +73,42 @@
     color: #5c5c5c;
     font-size: 18px;
     font-weight: 500;
+}
+.password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.password-container input {
+    flex: 1;
+    padding-right: 30px; /* Espacio para el signo de interrogación */
+}
+
+.password-tooltip {
+    position: absolute;
+    right: 10px; /* Coloca el signo al lado derecho */
+    cursor: pointer;
+    font-weight: bold;
+    color: #363636;
+}
+
+.tooltip-content {
+    display: none;
+    position: absolute;
+    top: 30px;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    width: 200px;
+}
+
+.password-tooltip:hover .tooltip-content {
+    display: block;
 }
 @media(max-width:1280px){
     .loginsignup{
